Fix box overflow in contact section
Setting min-width of flex container to be fit-
content will ensure box cannot shrink to be less
than current content.

--- a/index.css
+++ b/index.css
@@ -189,6 +189,7 @@ figcaption {
     justify-content: space-around;
     background-color: #3882f6;
     border-radius: 15px;
+    min-width: fit-content;
 }
 
 .contact.box .description {
